--- a/package.json
+++ b/package.json
@@ -8,19 +8,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/bottom-tabs": "^5.5.1",
     "@react-navigation/native": "^5.5.0",
     "expo": "~37.0.12",
     "react": "^16.13.1",
     "react-dom": "~16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
+    "react-native-elements": "^2.0.2",
+    "react-native-floating-action": "^1.20.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-reanimated": "~1.7.0",
     "react-native-safe-area-context": "0.7.3",
     "react-native-screens": "~2.2.0",
     "react-native-web": "~0.12.2",
-    "react-navigation": "^4.3.9",
-    "react-native-reanimated": "~1.7.0",
-    "@react-native-community/masked-view": "0.1.6"
+    "react-navigation": "^4.3.9"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
